# archive

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  404.html  CNAME  Makefile  README.md  archive.yaml  index.html  index.template.html  logic.js  publications.json  pyproject.toml  slides.template.html  style.css  terminal.html
.github/workflows/: check.yml  deploy.yml  update.yml
assets/: logic.js  milligram.min.css  style.css
development/: favicon-generator.html
development/ui/: course.html  main.html  teaching.html
generator/: _main.py  environment.py  index.py  layout.py  main.py  slides.py  zotero.py
generator/layout/: sitemap.xml  style.css
generator/templates/: slides.template.html
site/: hugo.toml
site/static/: CNAME  site.webmanifest
site/themes/book-toc-ck/: hugo.toml  theme.toml
site/themes/book-toc-ck/archetypes/: course.md  lecture.md  publications.md  teaching.md
site/themes/book-toc-ck/assets/css/: fonts.css  main.css
site/themes/book-toc-ck/data/: contact_icons.yaml
site/themes/book-toc-ck/layouts/: 404.html  baseof.html  index.html
site/themes/book-toc-ck/layouts/_default/: single.html  taxonomy.html  term.html
site/themes/book-toc-ck/layouts/about/: list.html
site/themes/book-toc-ck/layouts/course/: single.html
site/themes/book-toc-ck/layouts/partials/: analytics.html  category.html  course-card.html  course_card.html  footer.html  group_type.html  group_year.html  head.html  header.html  item.html  jsonld.html  lecture-link.html  lecture_link.html  margin_stats.html  nav.html  year-group.html
site/themes/book-toc-ck/layouts/publications/: list.html
tools/: .yamllint.yaml  Makefile  build_archive.py  check_zotero.py  fetch.py  generate.py  index.template  index_html_generator.py  models.py  pyproject.toml  requirements.txt  translit.py  validate.py
tools/tests/: conftest.py  test_fetch.py  test_generate.py  test_models.py  test_smoke.py  test_validate.py  test_visual.py
(+3 files in other folders)
