[project]
name = "archive-tools"
version = "0.1.0"
description = "CLI tools for korikov.cc archive site"
requires-python = ">=3.14"
dependencies = [
    "pyzotero",
    "pydantic>=2.0",
    "click",
    "pyyaml",
]

[project.scripts]
fetch = "fetch:main"
generate = "generate:main"
validate = "validate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
